--- a/patches/machine-patches.yaml
+++ b/patches/machine-patches.yaml
@@ -12,7 +12,7 @@ metadata:
     labels:
         omni.sidero.dev/machine: 4c4c4544-0035-3810-8038-b4c04f444d33
     annotations:
-        description: add 500 GB sda disk (CT500MX500SSD1) to omni-talos-1 with ext4
+        description: add 500 GB sda disk (CT500MX500SSD1) to omni-talos-1
         name: storage-disk-231
 spec:
   data: |
@@ -30,7 +30,6 @@ spec:
           - device: /dev/disk/by-id/ata-CT500MX500SSD1_2007E28A9F01
             partitions:
               - mountpoint: /var/mnt/storage
-                format: ext4
 ---
 # This is a machine patch that adds a 500GB CT500MX500SSD1 disk to omni-talos-2 (192.168.0.232)
 # The patch is applied to the machine with ID: 4c4c4544-005a-5410-804e-b3c04f363733
@@ -42,7 +41,7 @@ metadata:
     labels:
         omni.sidero.dev/machine: 4c4c4544-005a-5410-804e-b3c04f363733
     annotations:
-        description: add 500 GB sda disk (CT500MX500SSD1) to omni-talos-2 with ext4
+        description: add 500 GB sda disk (CT500MX500SSD1) to omni-talos-2
         name: storage-disk-232
 spec:
   data: |
@@ -60,7 +59,6 @@ spec:
           - device: /dev/disk/by-id/ata-CT500MX500SSD1_2007E28A9BBF
             partitions:
               - mountpoint: /var/mnt/storage
-                format: ext4
 ---
 # This is a machine patch that adds a 500GB CT500MX500SSD1 disk to omni-talos-3 (192.168.0.233)
 # The patch is applied to the machine with ID: 4c4c4544-0033-3810-8038-c8c04f444d33
@@ -72,7 +70,7 @@ metadata:
     labels:
         omni.sidero.dev/machine: 4c4c4544-0033-3810-8038-c8c04f444d33
     annotations:
-        description: add 500 GB sda disk (CT500MX500SSD1) to omni-talos-3 with ext4
+        description: add 500 GB sda disk (CT500MX500SSD1) to omni-talos-3
         name: storage-disk-233
 spec:
   data: |
@@ -90,7 +88,6 @@ spec:
           - device: /dev/disk/by-id/ata-CT500MX500SSD1_2007E28A9824
             partitions:
               - mountpoint: /var/mnt/storage
-                format: ext4
 ---
 # This is a machine patch that adds a 500GB CT500MX500SSD1 disk to omni-talos-4 (192.168.0.234)
 # The patch is applied to the machine with ID: 4c4c4544-005a-5310-8050-b3c04f363733
@@ -102,7 +99,7 @@ metadata:
     labels:
         omni.sidero.dev/machine: 4c4c4544-005a-5310-8050-b3c04f363733
     annotations:
-        description: add 500 GB sda disk (CT500MX500SSD1) to omni-talos-4 with ext4
+        description: add 500 GB sda disk (CT500MX500SSD1) to omni-talos-4
         name: storage-disk-234
 spec:
   data: |
@@ -120,7 +117,6 @@ spec:
           - device: /dev/disk/by-id/ata-CT500MX500SSD1_2007E28A9E77
             partitions:
               - mountpoint: /var/mnt/storage
-                format: ext4
 ---
 # This is a machine patch that adds a 500GB CT500MX500SSD1 disk to omni-talos-5 (192.168.0.235)
 # The patch is applied to the machine with ID: 4c4c4544-0056-3510-8033-b2c04f335133
@@ -132,7 +128,7 @@ metadata:
     labels:
         omni.sidero.dev/machine: 4c4c4544-0056-3510-8033-b2c04f335133
     annotations:
-        description: add 500 GB sda disk (CT500MX500SSD1) to omni-talos-5 with ext4
+        description: add 500 GB sda disk (CT500MX500SSD1) to omni-talos-5
         name: storage-disk-235
 spec:
   data: |
@@ -150,4 +146,3 @@ spec:
           - device: /dev/disk/by-id/ata-CT500MX500SSD1_2007E28A9F2F
             partitions:
               - mountpoint: /var/mnt/storage
-                format: ext4
