--- a/patches/vip-k8s-node-4.yaml
+++ b/patches/vip-k8s-node-4.yaml
@@ -1,23 +1,23 @@
 # Apply this path using omnictl apply -f vip-k8s-node-4.yaml
 # Optain the patch with omnictl get -o yaml configpatch <UUID of Patch in omni dashboard> > outputpatch.yaml
 
-metadata:
-    namespace: default
-    type: ConfigPatches.omni.sidero.dev
-    id: 500-84cb4d12-4bf3-4e77-b283-e62dfe51fbbb
-    labels:
-        omni.sidero.dev/machine: 4c4c4544-005a-5310-8050-b3c04f363733 #UUID From node log
-    annotations:
-        description: add vip to ControlPlane node
-        name: add vip
-spec:
-    data: |-
-        machine:
-          network:
-            interfaces:
-              - deviceSelector:
-                  physical: true # should select any hardware network device, if you have just one, it will be selected
-                dhcp: true
-                vip:
-                  ip: 192.168.0.230
+# metadata:
+#     namespace: default
+#     type: ConfigPatches.omni.sidero.dev
+#     id: 500-84cb4d12-4bf3-4e77-b283-e62dfe51fbbb
+#     labels:
+#         omni.sidero.dev/machine: 4c4c4544-005a-5310-8050-b3c04f363733 #UUID From node log
+#     annotations:
+#         description: add vip to ControlPlane node
+#         name: add vip
+# spec:
+#     data: |-
+#         machine:
+#           network:
+#             interfaces:
+#               - deviceSelector:
+#                   physical: true # should select any hardware network device, if you have just one, it will be selected
+#                 dhcp: true
+#                 vip:
+#                   ip: 192.168.0.230
 #    compresseddata: []
