--- a/homelab/extra-manifests/components.yaml
+++ b/homelab/extra-manifests/components.yaml
@@ -137,7 +137,7 @@ spec:
         - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
         - --kubelet-use-node-status-port
         - --metric-resolution=15s
-        image: registry.k8s.io/metrics-server/metrics-server:v0.8.0
+        image: registry.k8s.io/metrics-server/metrics-server:v0.8.0 # LATEST Version as of 12/30/2025 (Please check for newer versions)
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 3
