--- a/homelab/infrastructure/nginx-auth-proxy-longhorn.yaml
+++ b/homelab/infrastructure/nginx-auth-proxy-longhorn.yaml
@@ -1,3 +1,34 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-auth-config
+  namespace: longhorn-system
+data:
+  nginx.conf: |
+    events {
+      worker_connections 1024;
+    }
+    
+    http {
+      server {
+        listen 80;
+        server_name _;
+        
+        # Basic auth configuration
+        auth_basic "Restricted Access";
+        auth_basic_user_file /etc/nginx/auth;
+        
+        # Proxy to Longhorn
+        location / {
+          proxy_pass http://longhorn-frontend:80;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto $scheme;
+        }
+      }
+    }
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -24,7 +55,7 @@ spec:
           subPath: nginx.conf
         - name: auth
           mountPath: /etc/nginx/auth
-          readOnly: true
+          subPath: auth
       volumes:
       - name: nginx-config
         configMap:
@@ -45,31 +76,3 @@ spec:
   - port: 80
     targetPort: 80
   type: ClusterIP
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: nginx-auth-config
-  namespace: longhorn-system
-data:
-  nginx.conf: |
-    events {
-      worker_connections 1024;
-    }
-    
-    http {
-      server {
-        listen 80;
-        
-        location / {
-          auth_basic "Restricted Access";
-          auth_basic_user_file /etc/nginx/auth;
-          
-          proxy_pass http://longhorn-frontend:80;
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-        }
-      }
-    }
